Choose subnets randomly when there are equivalent options
The current placement strategy is not really ideal, but when there are capacity issues we
can probably improve things by not constantly trying to select the same subnet to allocate an instance in.
Randomising equivalent choices may probably help a bit, even if the strategy is still "dumb".